src/styles/style.css
/* ... */
table {
    color: blueviolet;
    font-size: 14px;
    text-shadow: 0 0 0.5px rgb(255, 255, 255);
    width: 90%;
    max-width: 200em;
}

td > a {
    color: rgb(166, 199, 213);
}


.user-amount-warning {
    display: none;
    border: 1px solid black;
    /*background-color: rgb(166, 199, 213);*/
    background: transparent;
    color: black;
    margin-bottom: 0.5em;
    font-size: 13px;
    width: 40em;
    text-align: center;
    padding: 1em;
    border-radius: 5px;
    /*font-style: italic;*/
}

.user-amount-warning > i {
    color: #bcd2e1;
}

#artifactIntro {
    background-color: black;
    border-top: 4px solid blueviolet;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

#artifact-description-body {
    background: transparent !important;
}

#artifact-description-text {
    line-height: 25px;
    max-width: 40em;
    text-align: center;
    display: flex;
    justify-content: center;
}

#artifact-description-text p {
    padding: 1em;
}

#artifactIntro h1 {
    padding: 1em 0 0 0;
}

.collapsing-quote {
    margin-top: 1em;
    margin-bottom: 1em;
    border: 2px solid white;
    padding: 2em;
    background-color: #00000069;
    text-shadow: #8a2be287 0 0 5em;
    color: white;
    text-align: center;
    font-size: 19px;
    width: 900px;
}

.collapsing-quote a, .collapsing-quote a:not([href]):not([class]) {
    color: #a291d2;
    cursor: pointer;
}

.collapsing-quote .collapsing {
    height: 0;
    overflow: hidden;
    transition: none;
}

.reviewer-name {
    font-family: larissa, monospace;
    font-size: 1em;
    margin-top: 1em;
}

.leaderboard-row {
    border-bottom: 1px solid #32383e;
    margin: 1em;
}

#art-label {
    text-align: left;
    padding-left: 2em;
}

.leaderboard-row td:nth-child(3) {
    min-width: 4em;
    letter-spacing: 0px;
    word-spacing: -5px;
}

.leaderboard-row td:nth-child(4) {
    max-width: 8em;
    overflow: hidden;
    text-overflow: ellipsis;
}

.center {
    display: flex;
    width: 100%;
    justify-content: center;
    flex-direction: column;
    align-items: center;
    margin-top: 1em;
    margin-bottom: 1em;
}

.amount-button {
    width: 2em;
}


p {
    margin: 0;
}

.number {
    color: black;
    font-size: .8em;
    letter-spacing: 10px;
}

#raisedSoFar {
    font-size: .6em;
}

.art {
    width: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
}

.about-band img {
    width: 34px;

}

#the-big-questions {
    margin-bottom: -3px !important;
    width: 100%;
}

.reel {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: row;
    margin: 2em;
}

.reel img {
    height: auto;
    width: 99%;
    padding: 0;
    border-radius: 10px;
    border: 1px solid #3c3344;
    margin: 0.5rem;
    clip: auto;
    object-fit: cover;
}


#below-the-fold {
    text-align: center;
    font-family: monospace;
    color: #e4e4e4;
    margin-top: 0;
    font-size: 19px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    width: 100%;
    background: #000000b2;
    padding: 2em;
    border-top: 2px solid blueviolet;
    border-bottom: 2px solid blueviolet;
}

#decrypt {
    width: 98%;
}

.toast-container {
    position: fixed;
    top: 0.5em;
}

.toast-header {
    display: flex;
    align-items: center;
    padding: var(--bs-toast-padding-y) var(--bs-toast-padding-x);
    color: var(--bs-toast-header-color);
    background-color: #d1dbe2;
    background-clip: padding-box;
    border-bottom: var(--bs-toast-border-width) solid var(--bs-toast-header-border-color);
    border-top-left-radius: calc(var(--bs-toast-border-radius) - var(--bs-toast-border-width));
    border-top-right-radius: calc(var(--bs-toast-border-radius) - var(--bs-toast-border-width));
}

.btn-close {
    --bs-btn-close-color: #fff;
    --bs-btn-close-bg: url("data:image/svg+xml,%3csvg xmlns=%27http://www.w3.org/2000/svg%27 viewBox=%270 0 16 16%27 fill=%27%23000%27%3e%3cpath d=%27M.293.293a1 1 0 0 1 1.414 0L8 6.586 14.293.293a1 1 0 1 1 1.414 1.414L9.414 8l6.293 6.293a1 1 0 0 1-1.414 1.414L8 9.414l-6.293 6.293a1 1 0 0 1-1.414-1.414L6.586 8 .293 1.707a1 1 0 0 1 0-1.414z%27/%3e%3c/svg%3e");
    --bs-btn-close-opacity: 0.5;
    --bs-btn-close-hover-opacity: 0.75;
    --bs-btn-close-focus-shadow: 0 0 0 0.25rem rgba(13, 110, 253, 0.25);
    --bs-btn-close-focus-opacity: 1;
    --bs-btn-close-disabled-opacity: 0.25;
    --bs-btn-close-white-filter: invert(1) grayscale(100%) brightness(200%);
    box-sizing: content-box;
    width: 1em;
    height: 1em;
    padding: .25em .25em;
    color: var(--bs-btn-close-color);
    background: transparent var(--bs-btn-close-bg) center/1em auto no-repeat;
    border: 0;
    border-radius: .375rem;
    opacity: var(--bs-btn-close-opacity);
}

#below-epsilon-toast .toast-body, #error-toast .toast-body {
    background: linear-gradient(#ab1b1b, #ffc3c3);
}

.toast-body {
    word-wrap: break-word;
    background: linear-gradient(#9198e5, #855aad);
    /* background: #d1dbe2; */
    /* color: black; */
    opacity: 1;
    padding: 1.4em;
}

#player {
    display: flex;
    justify-content: center;
    align-items: center;
    margin: 1em;
}

#aeiou {
    display: flex;
    flex-wrap: wrap;
    flex-direction: row;
    justify-content: center;
    align-items: center;
}


#aeiou img {
    height: 190px;
    width: 190px;
    padding: 0;
    border-radius: 9em;
    border: 1px solid #3c3344;
    margin: 6px;
    clip: auto;
    object-fit: cover;
}

#aeiou img:hover {
    opacity: 0.5;
    transition: 0.5s;
    border: 1px solid white;
}

.modal-dialog {
    max-width: 35em;
    margin-right: auto;
    margin-left: auto;
}

.modal-title {
    margin-bottom: 0;
    line-height: var(--bs-modal-title-line-height);
    font-family: "Bungee Shade", monospace;
    font-weight: 900;
    font-size: 1.9em;
}
/* ... */

